--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,36 +14,37 @@ p {
 }
 
 .b-example-divider {
-  height: 3rem;
-  background-color: rgba(0, 0, 0, .1);
-  border: solid rgba(0, 0, 0, .15);
-  border-width: 1px 0;
-  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+    height: 3rem;
+    background-color: rgba(0, 0, 0, .1);
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
 }
 
 .form-control-dark {
-  color: #fff;
-  background-color: var(--bs-dark);
-  border-color: var(--bs-gray);
+    color: #fff;
+    background-color: var(--bs-dark);
+    border-color: var(--bs-gray);
 }
+
 .form-control-dark:focus {
-  color: #fff;
-  background-color: var(--bs-dark);
-  border-color: #fff;
-  box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
+    color: #fff;
+    background-color: var(--bs-dark);
+    border-color: #fff;
+    box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
 }
 
 .bi {
-  vertical-align: -.125em;
-  fill: currentColor;
+    vertical-align: -.125em;
+    fill: currentColor;
 }
 
 .text-small {
-  font-size: 85%;
+    font-size: 85%;
 }
 
 .dropdown-toggle {
-  outline: 0;
+    outline: 0;
 }
 
 .wrapper {
@@ -52,10 +53,10 @@ p {
 
 /*sidebar style*/
 #sidebar {
-    width: 250px;
+    width: 300px;
     position: fixed;
     top: 0;
-    left: -250px;
+    left: -300px;
     height: 100vh;
     z-index: 999;
     background: #44b361;
@@ -74,7 +75,7 @@ p {
     height: 35px;
     line-height: 35px;
     text-align: center;
-    background: #fff;
+    background: #44b361;
     position: absolute;
     top: 10px;
     right: 10px;
@@ -86,8 +87,8 @@ p {
 
 
 #dismiss:hover {
-    background: pink;
-    color: pink;
+    background: white;
+    color: #3c9954;
 }
 
 .overlay {
@@ -99,10 +100,13 @@ p {
     opacity: 0;
     transition: all 0.5s ease-in-out;
 }
+
 .overlay.active {
     display: block;
     opacity: 1;
 }
+
+
 
 #sidebar .sidebar-header {
     padding: 20px;
@@ -111,7 +115,7 @@ p {
 
 #sidebar ul.components {
     padding: 20px 0;
-    border-bottom: 1px solid #47748b;
+    border-bottom: 1px solid #44b361;
 }
 
 #sidebar ul p {
@@ -123,6 +127,7 @@ p {
     padding: 10px;
     font-size: 1.1em;
     display: block;
+    color: #fff;
 }
 
 #sidebar ul li a:hover {
@@ -130,7 +135,7 @@ p {
     background: #fff;
 }
 
-#sidebar ul li.active>a,
+#sidebar ul li.active > a,
 a[aria-expanded="true"] {
     color: #fff;
     background: #44b361;
@@ -166,3 +171,95 @@ ul.CTAs a {
     margin-bottom: 5px;
 }
 
+/*#logo a {
+    position: relative;
+    top: 10%;
+    left: 40%;
+}*/
+
+#content ul button {
+    color: white;
+    background: #44b361;
+}
+
+
+
+#searchbox {
+    position: relative;
+    left: 35%;
+    height: 60px;
+    width: 600px;
+    border: 1px solid #000;
+    background: #fff;
+
+}
+
+#searchbox input {
+    font-size: 20px;
+    width: 325px;
+    padding: 10px;
+    border: 0px;
+    outline: none;
+    float: left;
+}
+
+#searchbox button {
+    width: 80px;
+    height: 100%;
+    border: 0px;
+    background: #000;
+    outline: none;
+    float: right;
+    color: white;
+
+}
+
+
+.content2 {
+    position: relative;
+    left: 30%;
+
+}
+
+.mountain {
+    width: 200px;
+    height: 300px;
+    background: #44b361;
+    color: white;
+    font-size: 30px;
+    font-weight: 700;
+    float: left;
+    margin: 50px;
+}
+
+.around {
+    width: 200px;
+    height: 300px;
+    background: #44b361;
+    color: white;
+    font-size: 30px;
+    font-weight: 700;
+    float: left;
+    margin: 50px;
+}
+
+.community {
+    width: 200px;
+    height: 300px;
+    background: #44b361;
+    color: white;
+    font-size: 30px;
+    font-weight: 700;
+    float: left;
+    margin: 50px;
+}
+
+.form-control-borderless {
+    border: none;
+}
+
+.form-control-borderless:hover, .form-control-borderless:active, .form-control-borderless:focus {
+    border: none;
+    outline: none;
+    box-shadow: none;
+}
