--- a/views/around.ejs
+++ b/views/around.ejs
@@ -1,47 +1,19 @@
-<!doctype html>
-<html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.88.1">
-    <title>Santas</title>
+<style>
+    .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+    }
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/album/">
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/navbars/">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    <!-- Bootstrap core CSS -->
-    <link href="../public/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    
-    <script src="https://kit.fontawesome.com/34806286ac.js" crossorigin="anonymous"></script>
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            user-select: none;
+    @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+            font-size: 3.5rem;
         }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
-
-
-</head>
+    }
+</style>
 
 <body>
 
@@ -291,30 +263,20 @@
 
     </main>
 
-    <footer class="text-muted py-5">
-        <div class="container">
-            <p class="float-end mb-1">
-                <a href="#">Back to top</a>
-            </p>
-            <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        </div>
-    </footer>
 
-    <script>
-        function switchHeart(clickedId) {
-            var defaultHeart = document.getElementById(clickedId);
-            
-            if (defaultHeart.classList.contains('fa-regular')) {
-                defaultHeart.classList.replace('fa-regular', 'fa-solid');
-                defaultHeart.style.color = "red";
-            }
-            else {
-                defaultHeart.classList.replace('fa-solid', 'fa-regular');
-                defaultHeart.style.color = "black";
-            }
+</body>
+
+<script>
+    function switchHeart(clickedId) {
+        var defaultHeart = document.getElementById(clickedId);
+        
+        if (defaultHeart.classList.contains('fa-regular')) {
+            defaultHeart.classList.replace('fa-regular', 'fa-solid');
+            defaultHeart.style.color = "red";
         }
-    </script>
-    <script src="../public/js/bootstrap.bundle.min.js"></script>
-
-
-</body></html>
+        else {
+            defaultHeart.classList.replace('fa-solid', 'fa-regular');
+            defaultHeart.style.color = "black";
+        }
+    }
+</script>
