--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,10 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="../public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
 
     <%- style %>
-    <%- defineContent('linkCss') %>
 
 </head>
 
