--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
+<link rel="stylesheet" href="../public/fonts/material-design-iconic-font.min.css">
 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sign Up Form by Colorlib</title>
+<link rel="stylesheet" href="../public/css/reg.css">
 
-    <!-- Font Icon -->
-    <link rel="stylesheet" href="../public/fonts/material-design-iconic-font.min.css">
-
-    <!-- Main css -->
-    <link rel="stylesheet" href="../public/css/reg.css">
-</head>
 <body>
 
     <div class="main">
@@ -73,5 +62,4 @@
     <!-- JS -->
     <script src="../public/js/jquery-3.3.1.min.js"></script>
     <script src="../public/js/main.js"></script>
-</body><!-- This templates was made by Colorlib (https://colorlib.com) -->
-</html>
+</body>
