--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,31 +28,31 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="./index.ejs">Home</a>
+                            <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./mountain.ejs">산</a>
+                            <a class="nav-link" href="./mountain">산</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./around.ejs">주변정보</a>
+                            <a class="nav-link" href="./around">주변정보</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./community.ejs">커뮤니티</a>
+                            <a class="nav-link" href="./community">커뮤니티</a>
                         </li>
                     </ul>
                     <ul class="nav">
-                        <li class="nav-item"><a href="./signIn.ejs" class="nav-link link-light px-2">로그인</a></li>
-                        <li class="nav-item"><a href="./signUp.ejs" class="nav-link link-light px-2">회원가입</a></li>
+                        <li class="nav-item"><a href="./signIn" class="nav-link link-light px-2">로그인</a></li>
+                        <li class="nav-item"><a href="./signUp" class="nav-link link-light px-2">회원가입</a></li>
                         <!-- 로그인 시 나타남-->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle link-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 내 정보
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="./bookmark.ejs">북마크</a>
-                                <a class="dropdown-item" href="./delPost.ejs">내가 쓴 글</a>
+                                <a class="dropdown-item" href="./bookmark">북마크</a>
+                                <a class="dropdown-item" href="./delPost">내가 쓴 글</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="./editProfile.ejs">계정 정보</a>
+                                <a class="dropdown-item" href="./myProfile">계정 정보</a>
                             </div>
                         </li>
                         <!-- /로그인 시 나타남-->
