--- a/views/myProfile.ejs
+++ b/views/myProfile.ejs
@@ -1,7 +1,7 @@
 
-<link href="../public/css/edit_profile.css" rel="stylesheet">
+<link href="/css/edit_profile.css" rel="stylesheet">
 
-<script src="../public/js/edit_profile.js"></script>
+<script src="/js/edit_profile.js"></script>
 
 <style>
   .bd-placeholder-img {
