--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,5 +1,5 @@
 
-<link rel="stylesheet" href="../public/css/style.css">
+<link rel="stylesheet" href="/css/searchStyle.css">
 
 <body>
   <!-- main -->
@@ -25,14 +25,14 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="images/금오산.jpg" class="d-block w-100" alt="...">
+        <img src="/images/금오산.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>금정산</h5>
           <p>주소</p>
         </div>
       </div>
       <div class="carousel-item">
-        <img src="images/금정.jpg" class="d-block w-100" alt="...">
+        <img src="/images/금정.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
           <h5>금오산</h5>
           <p>주소</p>
