--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -15,7 +15,7 @@
   }
 </style>
 
-<link href="../public/css/signin.css" rel="stylesheet">
+<link href="/css/signin.css" rel="stylesheet">
   
   
 <body class="text-center">
@@ -24,7 +24,7 @@
 <main class="form-signin">
   <form>
     <a href="./index.html" target="_blank">
-        <img class="mb-4" src="./image/santasmoun.png" alt="" width="220" height="110">
+        <img class="mb-4" src="/images/santasmoun.png" alt="" width="220" height="110">
     </a>
       
     <h1 class="h3 mb-3 fw-normal">Please log-in</h1>
