--- a/views/delPost.ejs
+++ b/views/delPost.ejs
@@ -1,10 +1,10 @@
 
-<link rel="stylesheet" href="../public/css/owl.carousel.min.css">
+<link rel="stylesheet" href="/css/owl.carousel.min.css">
 
 <!-- Style -->
-<link rel="stylesheet" href="../public/css/del_post.css">
+<link rel="stylesheet" href="/css/del_post.css">
 
-  <body>
+<body>
 
   <div class="content">
 
@@ -89,11 +89,7 @@
     </div>
 
   </div>
+</body>
 
-
-
-    <script src="../public/js/jquery-3.3.1.min.js"></script>
-    <script src="../public/js/popper.min.js"></script>
-    <script src="../public/js/bootstrap.min.js"></script>
-    <script src="../public/js/main.js"></script>
-  </body>
+<script src="/js/main.js"></script>
+<script src="/js/owl.carousel.min.js"></script>
