--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 
 </style>
 
-<link href="../public/css/style.css" rel="stylesheet">
+<link href="/css/indexStyle.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.min.css">
 
 <body>
@@ -60,67 +60,12 @@
 
             <ul class="list-unstyled components">
                 <p>Let's hiking together ♥</p>
-                <li>
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Mountain</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
-                        <li>
-                            <a href="#">Region</a>
-                        </li>
-                        <li>
-                            <a href="#">Level</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">주변정보</a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <l1>
-                            <a href="#">맛집</a>
-                        </l1>
-                        <l1>
-                            <a href="#">명소</a>
-                        </l1>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#">Community</a>
-                </li>
-
-                <li>
-                    <a href="#">북마크</a>
-                </li>
-                <li>
-                    <a href="#">내 정보</a>
-                </li>
             </ul>
         </nav>
 
 
         <!--Page content-->
         <div id="content">
-
-            <nav class="py-2 bg-light border-bottom">
-                <div class="container d-flex flex-wrap">
-                    <ul class="nav me-auto">
-                        <button type="button" id="sidebarCollapse" class="btn btn-info">
-                            <i class="fas fa-align-left"></i>
-                            <span>MENU</span>
-                        </button>
-
-
-                        <li class="nav-item"><a href="#" class="nav-link link-dark px-2 active" aria-current="page"></a></li>
-                        <li class="nav-item"><a href="#" class="nav-link link-dark px-2 active" aria-current="page">산</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link link-dark px-2">주변정보</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link link-dark px-2">커뮤니티</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link link-dark px-2">북마크</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link link-dark px-2"></a></li>
-                    </ul>
-                    <ul class="nav">
-                        <li class="nav-item"><a href="./signin.ejs" class="nav-link link-dark px-2">Login</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link link-dark px-2">Sign up</a></li>
-                    </ul>
-                </div>
-            </nav>
         </div>
     </div>
 
@@ -129,7 +74,7 @@
     <!--로고 사이즈 조정 중...-->
     <header id="logo">
         <div class="row justify-content-center">
-            <a href="index.ejs" target="_blank">
+            <a href="/" target="_blank">
                 <img class="col-xs-7 col-sm-7 col-md-4 col-lg-4 p-3" src="" alt="">
             </a>
         </div>
@@ -169,7 +114,7 @@
                     <div class="card p-3 shadow text-center border-0">
                         <div class="card-body">
                             <a href="#">
-                                <img src="./image/mountain.png" width=100px>
+                                <img src="/images/mountain.png" width=100px>
                                 <hr />
                                 <h2 class="card-title display-1" style="font-size:3.0vmin;">산 검색</h2>
                             </a>
@@ -181,7 +126,7 @@
                     <div class="card p-3 shadow text-center border-0">
                         <div class="card-body">
                            <a href="#">
-                            <img src="./image/gyeongbokgung-palace.png" width=100px>
+                            <img src="/images/gyeongbokgung-palace.png" width=100px>
                             <hr />
                                <h2 class="card-title display-1" style="font-size:3.0vmin;">주변정보</h2></a>
                         </div>
@@ -191,7 +136,7 @@
                     <div class="card p-3 shadow text-center border-0">
                         <div class="card-body">
                            <a href="#">
-                            <img src="./image/community.png" width=100px>
+                            <img src="/images/community.png" width=100px>
                             <hr />
                             <h2 class="card-title display-1" style="font-size:3.0vmin;">커뮤니티</h2>
                             </a>
@@ -222,13 +167,13 @@
                 <!-- The slideshow -->
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./image/seolakmt.jpg" width="100%" alt="설악산">
+                        <img src="/images/seolakmt.jpg" width="100%" alt="설악산">
                     </div>
                     <div class="carousel-item">
-                        <img src="./image/geumsan.png" width="100%" alt="금산산정">
+                        <img src="/images/geumsan.png" width="100%" alt="금산산정">
                     </div>
                     <div class="carousel-item">
-                        <img src="./image/hiking.jpeg" width="100%" alt="등산">
+                        <img src="/images/hiking.jpeg" width="100%" alt="등산">
                     </div>
                 </div>
 
@@ -248,38 +193,28 @@
 
 
     <div class="overlay"></div>
+</body>
 
+<!-- jQuery Custom Scroller CDN -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
 
-
-
-    <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!-- Popper.JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-    <!-- jQuery Custom Scroller CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
-
-    <script type="text/javascript">
-        $(document).ready(function() {
-            $("#sidebar").mCustomScrollbar({
-                theme: "minimal"
-            });
-
-            $('#dismiss, .overlay').on('click', function() {
-                $('#sidebar').removeClass('active');
-                $('.overlay').removeClass('active');
-            });
-
-            $('#sidebarCollapse').on('click', function() {
-                $('#sidebar').addClass('active');
-                $('.overlay').addClass('active');
-                $('.collapse.in').toggleClass('in');
-                $('a[aria-expanded=true]').attr('aria-expanded', 'false');
-            });
+<script type="text/javascript">
+    $(document).ready(function() {
+        $("#sidebar").mCustomScrollbar({
+            theme: "minimal"
         });
 
-    </script>
+        $('#dismiss, .overlay').on('click', function() {
+            $('#sidebar').removeClass('active');
+            $('.overlay').removeClass('active');
+        });
 
-</body>
+        $('#sidebarCollapse').on('click', function() {
+            $('#sidebar').addClass('active');
+            $('.overlay').addClass('active');
+            $('.collapse.in').toggleClass('in');
+            $('a[aria-expanded=true]').attr('aria-expanded', 'false');
+        });
+    });
+
+</script>
