--- a/views/mountainInfo.ejs
+++ b/views/mountainInfo.ejs
@@ -16,7 +16,7 @@
 
     
 <!-- Custom styles for this template -->
-<link href="../public/css/carousel.css" rel="stylesheet">
+<link href="css/carousel.css" rel="stylesheet">
 
 
 <body>
