--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="../public/fonts/material-design-iconic-font.min.css">
+<link rel="stylesheet" href="/fonts/material-design-iconic-font.min.css">
 
-<link rel="stylesheet" href="../public/css/reg.css">
+<link rel="stylesheet" href="/css/reg.css">
 
 <body>
 
@@ -51,15 +51,13 @@
                         </form>
                     </div>
                     <div class="signup-image">
-                        <figure><img src="images/signup-image.jpg" alt="sing up image"></figure>
+                        <figure><img src="/images/signup-image.jpg" alt="sing up image"></figure>
                         <a href="#" class="signup-image-link">I am already member</a>
                     </div>
                 </div>
             </div>
         </section>
 
-
-    <!-- JS -->
-    <script src="../public/js/jquery-3.3.1.min.js"></script>
-    <script src="../public/js/main.js"></script>
 </body>
+
+<script src="/js/main.js"></script>
