--- a/views/signIn.ejs
+++ b/views/signIn.ejs
@@ -23,11 +23,11 @@
     
 <main class="form-signin">
   <form>
-    <a href="./index.html" target="_blank">
+    <a href="/" target="_blank">
         <img class="mb-4" src="/images/santasmoun.png" alt="" width="220" height="110">
     </a>
       
-    <h1 class="h3 mb-3 fw-normal">Please log-in</h1>
+    <h1 class="h3 mb-3 fw-normal">Sign In</h1>
 
     <div class="form-floating">
       <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -43,8 +43,8 @@
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">log-in</button>
-    <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Log In</button>
+    <p class="mt-5 mb-3 text-muted">&copy; 2022</p>
   </form>
 </main>
 
