--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -52,7 +52,7 @@
                     </div>
                     <div class="signup-image">
                         <figure><img src="/images/signup-image.jpg" alt="sing up image"></figure>
-                        <a href="#" class="signup-image-link">I am already member</a>
+                        <a href="/signIn" class="signup-image-link">I am already member</a>
                     </div>
                 </div>
             </div>
