--- a/public/css/reg.css
+++ b/public/css/reg.css
@@ -73,8 +73,7 @@ h2 {
   padding: 0;
   font-weight: bold;
   color: #222;
-  font-family: Poppins;
-  font-size: 36px; }
+}
 
 .main {
   background: #f8f8f8;
