--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,5 +1,3 @@
-<link rel="stylesheet" href="/fonts/material-design-iconic-font.min.css">
-
 <link rel="stylesheet" href="/css/reg.css">
 
 <body>
@@ -14,31 +12,31 @@
                         <h2 class="form-title">Sign up</h2>
                         <form method="POST" class="register-form" id="register-form">
                             <div class="form-group">
-                                <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <label for="name"></label>
                                 <input type="text" name="name" id="name" placeholder="Your Name"/>
                             </div>
                             <div class="form-group">
-                                <label for="username"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <label for="username"></label>
                                 <input type="username" name="nickname" id="username" placeholder="Username"/>
                             </div>
                             <div class="form-group">
-                                <label for="b_day"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <label for="b_day"></label>
                                 <input type="b_day" name="b_day" id="b_day" placeholder="ex)19000130"/>
                             </div>
                             <div class="form-group">
-                                <label for="email"><i class="zmdi zmdi-email"></i></label>
+                                <label for="email"></label>
                                 <input type="email" name="email" id="email" placeholder="Your Email"/>
                             </div>
                             <div class="form-group">
-                                <label for="id"><i class="zmdi zmdi-lock"></i></label>
+                                <label for="id"></label>
                                 <input type="id" name="id" id="id" placeholder="ID"/>
                             </div>
                             <div class="form-group">
-                                <label for="pass"><i class="zmdi zmdi-lock"></i></label>
+                                <label for="pass"></label>
                                 <input type="password" name="pass" id="pass" placeholder="Password"/>
                             </div>
                             <div class="form-group">
-                                <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
+                                <label for="re-pass"></label>
                                 <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password"/>
                             </div>
                             <div class="form-group">
