--- a/views/signUp.ejs
+++ b/views/signUp.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
+
 <link rel="stylesheet" href="/css/reg.css">
 
 <body>
