--- a/public/css/reg.css
+++ b/public/css/reg.css
@@ -331,6 +331,7 @@ label.valid {
 
 .label-agree-term {
   position: relative;
+  font-size: 10px;
   top: 0%;
   transform: translateY(0);
   -moz-transform: translateY(0);
