--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -43,7 +43,8 @@
                     <ul class="nav">
                         <li class="nav-item"><a href="./signIn" class="nav-link link-light px-2">로그인</a></li>
                         <li class="nav-item"><a href="./signUp" class="nav-link link-light px-2">회원가입</a></li>
-                        <!-- 로그인 시 나타남-->
+                        <!-- 로그인 시 나타남
+                        <li class="nav-item userInfo"><%= ${users.nickname} %> 님</li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle link-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 내 정보
@@ -55,7 +56,7 @@
                                 <a class="dropdown-item" href="./myProfile">계정 정보</a>
                             </div>
                         </li>
-                        <!-- /로그인 시 나타남-->
+                        로그인 시 나타남-->
                     </ul>
                 </div>
 
