--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -60,6 +60,29 @@
             <div class="container">
 
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+                    <% mountains.forEach(m => { %>
+                        <div class="col">
+                            <div class="card shadow-sm">
+                                <svg class="bd-placeholder-img card-img-top" width="100%" height="0" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                                    <img src="" alt="" />
+                                    <title>Placeholder</title>
+                                    <rect width="100%" height="100%" fill="#cae3cc" />
+                                </svg>
+    
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        <%= m.name %>
+                                    </p>
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <div class="btn-group">
+                                            <button type="button" class="btn btn-sm btn-outline-secondary"><a href="<%= `/mountainInfo/${m.number}` %>">View</a></button>
+                                        </div>
+                                        <i class="fa-regular fa-heart" id="<%= m.name %>" onclick="switchHeart(this.id)"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    <% }); %> 
                     <div class="col">
                         <div class="card shadow-sm">
                             <svg class="bd-placeholder-img card-img-top" width="100%" height="0" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
@@ -277,10 +300,12 @@
         if (defaultHeart.classList.contains('fa-regular')) {
             defaultHeart.classList.replace('fa-regular', 'fa-solid');
             defaultHeart.style.color = "red";
+            req.render("`bookmark/${m.number}`");
         }
         else {
             defaultHeart.classList.replace('fa-solid', 'fa-regular');
             defaultHeart.style.color = "black";
+            req.render("`bookmark/${m.number}/delete`");
         }
     }
 </script>
