--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -31,29 +31,27 @@
                 <div class="dropdown region">
                     <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">지역</button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">서울</a>
-                        <a class="dropdown-item" href="#">경기도</a>
-                        <a class="dropdown-item" href="#">인천</a>
-                        <a class="dropdown-item" href="#">강원도</a>
-                        <a class="dropdown-item" href="#">충청도</a>
-                        <a class="dropdown-item" href="#">대전</a>
-                        <a class="dropdown-item" href="#">전라도</a>
-                        <a class="dropdown-item" href="#">광주</a>
-                        <a class="dropdown-item" href="#">경상도</a>
-                        <a class="dropdown-item" href="#">대구</a>
-                        <a class="dropdown-item" href="#">울산</a>
-                        <a class="dropdown-item" href="#">부산</a>
-                        <a class="dropdown-item" href="#">제주도</a>
+                        <a class="dropdown-item" href="/mountain/서울">서울</a>
+                        <a class="dropdown-item" href="/mountain/경기">경기도</a>
+                        <a class="dropdown-item" href="/mountain/인천">인천</a>
+                        <a class="dropdown-item" href="/mountain/강원">강원도</a>
+                        <a class="dropdown-item" href="/mountain/충청">충청도</a>
+                        <a class="dropdown-item" href="/mountain/대전">대전</a>
+                        <a class="dropdown-item" href="/mountain/전라">전라도</a>
+                        <a class="dropdown-item" href="/mountain/광주">광주</a>
+                        <a class="dropdown-item" href="/mountain/경상">경상도</a>
+                        <a class="dropdown-item" href="/mountain/대구">대구</a>
+                        <a class="dropdown-item" href="/mountain/울산">울산</a>
+                        <a class="dropdown-item" href="/mountain/부산">부산</a>
+                        <a class="dropdown-item" href="/mountain/제주">제주도</a>
                     </div>
                 </div>
                 <div class="dropdown hard">
                     <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">난이도</button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">1</a>
-                        <a class="dropdown-item" href="#">2</a>
-                        <a class="dropdown-item" href="#">3</a>
-                        <a class="dropdown-item" href="#">4</a>
-                        <a class="dropdown-item" href="#">5</a>
+                        <a class="dropdown-item" href="/mountain/difficulty/상">상</a>
+                        <a class="dropdown-item" href="/mountain/difficulty/중">중</a>
+                        <a class="dropdown-item" href="/mountain/difficulty/하">하</a>
                     </div>
                 </div>
             </div>
@@ -295,7 +293,7 @@
 
 <script>
     function switchHeart(clickedId) {
-        var defaultHeart = document.getElementById(clickedId);
+        const defaultHeart = document.getElementById(clickedId);
         
         if (defaultHeart.classList.contains('fa-regular')) {
             defaultHeart.classList.replace('fa-regular', 'fa-solid');
@@ -309,3 +307,4 @@
         }
     }
 </script>
+
