--- a/views/around.ejs
+++ b/views/around.ejs
@@ -69,7 +69,7 @@
                                         <%= a.name %>
                                     </p>
                                     <!--<div class="d-flex justify-content-between align-items-center">
-                                        <i class="fa-regular fa-heart" id="<%= a.name %>" onclick="switchHeart(this.id)"></i>
+                                        <i class="fa-regular fa-heart" id="<%= //a.name %>" onclick="switchHeart(this.id)"></i>
                                     </div>-->
                                 </div>
                             </div>
