--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -95,7 +95,7 @@
                                 </p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                                        <button type="button" class="btn btn-sm btn-outline-secondary"><a href="/mountainInfo/<%= m.number %>">View</a></button>
                                         <!--<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>-->
                                     </div>
                                     <i class="fa-regular fa-heart" id="halla" onclick="switchHeart(this.id)"></i>
