--- a/views/around.ejs
+++ b/views/around.ejs
@@ -47,9 +47,9 @@
                         <a class="dropdown-item" href="/around/제주">제주도</a>
                     </div>
                 </div>
-                <form method="post" action="/around/:searchWord">
+                <form method="post" action="/around">
                         <input class="form-control around-search" type="text" placeholder="산 이름" aria-label="Search" name="searchWord">
-                        <input type="submit" name="submit"><button class="btn btn-primary around-search">검색</button></input>
+                        <button class="btn btn-primary around-search" type="submit">검색</button>
                 </form>
             </div>
             <div class="container">
