--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -31,7 +31,7 @@
                 <div class="dropdown region">
                     <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">지역</button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/mountain/서울">서울</a>
+                        <form action="/mountain" method="post"><a class="dropdown-item" type="submit" name="searchWord">서울</a></form>
                         <a class="dropdown-item" href="/mountain/경기">경기도</a>
                         <a class="dropdown-item" href="/mountain/인천">인천</a>
                         <a class="dropdown-item" href="/mountain/강원">강원도</a>
