--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -49,7 +49,7 @@
                 <div class="dropdown hard">
                     <button class="btn btn-primary dropdown-toggle" data-toggle="dropdown">난이도</button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="/mountain/difficulty/상">상</a>
+                        <form action="/mountain" method="get"><a class="dropdown-item" type="submit" name="difficulty">상</a></form>
                         <a class="dropdown-item" href="/mountain/difficulty/중">중</a>
                         <a class="dropdown-item" href="/mountain/difficulty/하">하</a>
                     </div>
